--- a/GDSheetControllerDemo/GDSheetControllerDemo/GDMainViewController.xib
+++ b/GDSheetControllerDemo/GDSheetControllerDemo/GDMainViewController.xib
@@ -39,7 +39,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="191373211">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="557355485">
@@ -47,6 +47,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{108, 430}, {105, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -81,6 +82,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 51}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="579387653"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -113,6 +115,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 88}, {280, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="142978054"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -149,6 +152,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{39, 142}, {242, 150}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="588860134"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="738784727"/>
@@ -167,6 +171,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{144, 311}, {156, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="86178467"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -199,6 +204,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 319}, {94, 27}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="346486055"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -212,6 +218,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 378}, {284, 23}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="557355485"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -222,6 +229,8 @@
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 504}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="764161561"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -392,7 +401,7 @@
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="343411479">
+							<object class="IBNSLayoutConstraint" id="186287890">
 								<reference key="firstItem" ref="346486055"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -477,7 +486,7 @@
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="57984268">
+							<object class="IBNSLayoutConstraint" id="182885648">
 								<reference key="firstItem" ref="142978054"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -494,7 +503,7 @@
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="712622082">
+							<object class="IBNSLayoutConstraint" id="1043310700">
 								<reference key="firstItem" ref="579387653"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -562,7 +571,7 @@
 								<int key="contentType">3</int>
 								<bool key="placeholder">NO</bool>
 							</object>
-							<object class="IBNSLayoutConstraint" id="444452000">
+							<object class="IBNSLayoutConstraint" id="534910221">
 								<reference key="firstItem" ref="764161561"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -768,22 +777,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">71</int>
-						<reference key="object" ref="343411479"/>
+						<reference key="object" ref="186287890"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">97</int>
-						<reference key="object" ref="712622082"/>
+						<reference key="object" ref="1043310700"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">98</int>
-						<reference key="object" ref="444452000"/>
+						<reference key="object" ref="534910221"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">100</int>
-						<reference key="object" ref="57984268"/>
+						<reference key="object" ref="182885648"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -797,17 +806,17 @@
 				<array key="1.IBViewMetadataConstraints">
 					<reference ref="177364934"/>
 					<reference ref="620230704"/>
-					<reference ref="444452000"/>
+					<reference ref="534910221"/>
 					<reference ref="837716806"/>
 					<reference ref="380526110"/>
 					<reference ref="254996312"/>
-					<reference ref="712622082"/>
-					<reference ref="57984268"/>
+					<reference ref="1043310700"/>
+					<reference ref="182885648"/>
 					<reference ref="954495699"/>
 					<reference ref="104992978"/>
 					<reference ref="5655498"/>
 					<reference ref="718007259"/>
-					<reference ref="343411479"/>
+					<reference ref="186287890"/>
 					<reference ref="628820869"/>
 					<reference ref="177399888"/>
 					<reference ref="1045371703"/>
@@ -857,7 +866,37 @@
 			<nil key="sourceID"/>
 			<int key="maxID">102</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">GDMainViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">contentLabel</string>
+						<string key="NS.object.0">UILabel</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">contentLabel</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">contentLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/GDMainViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.previouslyAttemptedUpgradeToXcode5">YES</bool>
